counter: i made a change so the counter wooldnt go beyond 1 and i also made a change to the review and change it to my Profile instead

--- a/review.html
+++ b/review.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Tutorials</title>
+    <title>My Profile</title>
     <link rel="stylesheet" href="review.css" />
   </head>
   <body>
-      <div class="container"></div>
+    <div class="container"></div>
     <main>
       <section class="container">
         <div class="title">
-          <h2>Our Reviews</h2>
+          <h2>Profile</h2>
           <div class="underline"></div>
         </div>
-        <!--review-->
+        <!--profile-->
         <article class="review">
           <div class="img-container">
-            <img src="person-1.jpeg" id="person-img" alt="person" />
+            <img src="meee.jpeg" id="person-img" alt="person" />
           </div>
-          <h4 id="author">Sara Jones</h4>
+          <h4 id="author">Tina Bals</h4>
+          <p id="job">Web Developer</p>
+          <p id="info">
+            I am a web developer, interning at Cygnusspin Software Solutions.
+          </p>
         </article>
       </section>
     </main>
